--- a/corbion.html
+++ b/corbion.html
@@ -99,7 +99,7 @@
             <div data-os-animation="fadeIn" data-os-animation-delay="0.3s" class="col-md-6 margin-top small-screen-margin-top os-animation">
               <div class="icon-block"><i class="icon-basic-sheet-pencil"></i>
                 <h4>Challenge</h4>
-                <p style="font-size: 16px">Design a smart device that supports operators during their activities in a chemichal factory.</p>
+                <p style="font-size: 16px">Design a smart device that supports operators during their activities in a chemical factory.</p>
               </div>
             </div>
             <div data-os-animation="fadeIn" data-os-animation-delay="0.4s" class="col-md-6 margin-top small-screen-margin-top os-animation">
